# recon-framework

./: .env.example  .gitignore  LICENSE  OSINT_final.py  README.md  pyproject.toml  recon.py  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  GIT_ROADMAP.md  GIT_ROADMAP_INTERACTIVE.md  GIT_ROADMAP_LAB.md  INSTALL.md  LAB_SOLUTION.md  ROADMAP.md  USAGE.md
recon/: __init__.py  api.py  cli.py  interactive.py
recon/collectors/: __init__.py  base.py  dns_collector.py  registry.py  shodan_collector.py  virustotal_collector.py  whois_collector.py
recon/core/: __init__.py  config.py  engine.py  exceptions.py  models.py
recon/output/: __init__.py  formatters.py  storage.py
recon/utils/: __init__.py  http.py  logging.py  resolver.py  validators.py
tests/: conftest.py
tests/integration/: test_engine.py
tests/unit/: test_collectors.py  test_config.py  test_formatters.py  test_interactive.py  test_models.py  test_resolver.py  test_shodan_domain_and_facade.py  test_validators.py
