[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-framework"
version = "1.1.0"
description = "A modular, extensible reconnaissance / OSINT framework for the Reconnaissance Part 1 methodology."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "captainx-dcode" }]
keywords = ["osint", "reconnaissance", "recon", "security", "pentest", "whois", "virustotal", "shodan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.31.0",
    "python-whois>=0.9.0",
    "dnspython>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[project.urls]
Homepage = "https://github.com/captainx-dcode/recon-framework"
Repository = "https://github.com/captainx-dcode/recon-framework"

# `recon` becomes a runnable command after `pip install .`
[project.scripts]
recon = "recon.cli:main"

[tool.setuptools.packages.find]
include = ["recon*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.coverage.run]
source = ["recon"]
omit = ["tests/*"]
